--- a/app/src/Internal/res/values/strings.xml
+++ b/app/src/Internal/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">u2020 +Internal</string>
+    <string name="app_name">Razer Pay +Internal</string>
 </resources>
